# playing-card-detection

./: .gitignore  README.md  TODO.md  creating_playing_cards_dataset.ipynb  pyproject.toml
card_generator/: extract_card.py  extract_card_from_image.py  extract_cards_from_video.py  find_convex_hull.py  image_source.py  types.py  util.py
card_generator/decks/: __init__.py  base.py  tarot.py
card_generator/scenes/: base.py  fanned.py  image_source.py
data/: .gitignore
decks/: abstract.py  tarot.py
tasks/: __init__.py  extract_card.py  test.py  util.py
test/: .gitignore
