[tool.poetry]
name = "playing-card-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.12"
notebook = "^6.3.0"
imgaug = "^0.4.0"
shapely = "^1.7.1"
tqdm = "^4.59.0"
jupyter_contrib_nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
